# xdg-chooser

./: CLAUDE.md  Cargo.toml  README.md
data/: gtkchooser.desktop  xdg-chooser.desktop
src/: app.rs  main.rs  window.rs
src/config/: mimeapps.rs  mod.rs
src/desktop/: categories.rs  discovery.rs  entry.rs  mod.rs
src/ui/: app_row.rs  category_page.rs  mod.rs  sidebar.rs
src/utils/: exec.rs  icons.rs  mod.rs
